<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_nav_weather"
        android:title="@string/nav_weather" />
    <item
        android:id="@+id/navigation_create_post"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_publish" />
    <item
        android:id="@+id/navigation_try_on"
        android:icon="@drawable/ic_nav_try_on"
        android:title="@string/nav_try_on" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_me" />
</menu>
